@@ -2,8 +2,8 @@
 
 namespace Drupal\search_api\Plugin;
 
-use Drupal\Core\Entity\DependencyTrait;
 use Drupal\Core\Plugin\PluginBase;
+use Drupal\Core\Plugin\PluginDependencyTrait;
 use Symfony\Component\DependencyInjection\ContainerInterface;
 
 /**
@@ -11,7 +11,13 @@ use Symfony\Component\DependencyInjection\ContainerInterface;
  */
 abstract class ConfigurablePluginBase extends PluginBase implements ConfigurablePluginInterface {
 
-  use DependencyTrait;
+  // Normally, we'd just need \Drupal\Core\Entity\DependencyTrait here for
+  // plugins. However, in a few cases, plugins use plugins themselves, and then
+  // the additional calculatePluginDependencies() method from this trait is
+  // useful. Since PHP 5 complains when adding this trait along with its
+  // "parent" trait to the same class, we just add it here in case a child class
+  // does need it.
+  use PluginDependencyTrait;
 
   /**
    * {@inheritdoc}
